CAMEL-23672: Add stub endpoint detection, direction arrows, and TUI History improvements (#23772)
* CAMEL-23672: Add stub endpoint detection and direction arrows to BacklogTracer and TUI History

Co-Authored-By: Claude <noreply@anthropic.com>
Signed-off-by: Claus Ibsen <claus.ibsen@gmail.com>

* CAMEL-23672: TUI History tab improvements - wider route column, step count in titles, waterfall selection highlight, pgup/pgdn jump, diagram hint in waterfall mode

Co-Authored-By: Claude <noreply@anthropic.com>
Signed-off-by: Claus Ibsen <claus.ibsen@gmail.com>

* CAMEL-23672: Remove ! from topology error counter and fix Browse tab truncated empty message

Co-Authored-By: Claude <noreply@anthropic.com>
Signed-off-by: Claus Ibsen <claus.ibsen@gmail.com>

* CAMEL-23672: TUI source viewer cursor navigation with diagram node selection

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>
Signed-off-by: Claus Ibsen <claus.ibsen@gmail.com>

* CAMEL-23672: TUI topology route tree preview overlay

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>
Signed-off-by: Claus Ibsen <claus.ibsen@gmail.com>

* CAMEL-23672: TUI drill-down route tree preview with selection highlight

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>
Signed-off-by: Claus Ibsen <claus.ibsen@gmail.com>

* CAMEL-23672: TUI cache source code loading for faster navigation

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>
Signed-off-by: Claus Ibsen <claus.ibsen@gmail.com>

* CAMEL-23672: TUI improve source-to-diagram node matching algorithm

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>
Signed-off-by: Claus Ibsen <claus.ibsen@gmail.com>

* CAMEL-23672: TUI fix source cache thread safety with ConcurrentHashMap

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>
Signed-off-by: Claus Ibsen <claus.ibsen@gmail.com>

* CAMEL-23672: TUI share source cache across routes from the same file

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>
Signed-off-by: Claus Ibsen <claus.ibsen@gmail